feat: release v0.0.9 - Integrated Symbols & Cleanup
- FEAT: Symbols Table integration. The IDE now reads .symbols files generated by Pasmo and displays them in the Output Console.
- FEAT: Single-Window Splash Screen. Replaced multi-stage startup with a StackPane overlay to improve stability.
- REFACTOR: Removed legacy ZEsarUX external bridge code.
- FIX: Pasmo compiler now uses strict positional arguments (Input -> Output -> Symbol -> Publics).
- FIX: Sidebar headers now support CSS theming (removed hardcoded styles).
- KNOWN ISSUE: Minor focus flicker on macOS startup when Splash dismisses.

Note: Reverted experimental java.awt.Robot fix due to JVM crashes on macOS.